# dashboard-google-cartorio-paulista

./: .dockerignore  .env.docker  .env.docker.example  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONFIGURACAO_FINAL_SISTEMA.md  CORRECOES_APLICADAS.md  CORRECOES_COLABORADORES_OUTUBRO.md  DIAGNOSTICO_SUPABASE.md  DIRETRIZES_DESENVOLVIMENTO_FUNCIONAMENTO.md  IMPLEMENTACAO_COMPLETA.md  LOGS_DESENVOLVIMENTO.md  PREMISSAS_DE_DESIGN.md  PROJECT_SUMMARY.md  PROMPT_COMPLETO.md  PROMPT_SISTEMA_COLETA_AUTOMATICA.md  RAILWAY_DEPLOY_GUIDE.md  RAILWAY_MCP_SETUP.md  README.md  README_DASHBOARD.md  RELATORIO_FINAL_RAILWAY.md  SESSION-RESUME.md  STATUS_IMPLEMENTACAO.md  VALIDACAO_DADOS_PRODUCAO.md  blueprint_dashboard_nivel_shadcn_tan_stack_para_cursor_ide.md  check-account-status.js  collect-all-reviews-robust.js  collect-all-reviews.js  collect-august-2025.js  compute_daily_from_scraper_when.js  daily_counts_2025-09_filtered.txt  docker-compose.dev.yml  docker-compose.yml  github_tools.json  gmaps-input.txt  h origin main  package-lock.json  package.json  (+10 more)
.cursor/: mcp.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.json
backend/app/: main.py
backend/scripts/: apply_phase0.py  bootstrap_admin.py  export_schema.py
backend/tests/: conftest.py  test_admin_users.py  test_audit_log.py  test_auth_endpoints.py  test_bootstrap_admin.py  test_collaborators_crud.py  test_collaborators_csv.py  test_collaborators_merge.py  test_collaborators_profile.py  test_deps_auth.py  test_health.py  test_jwt_validation.py  test_metrics.py  test_observability.py  test_rate_limit.py  test_reviews.py  test_supabase_auth.py
workers/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.json
(+469 files in other folders)
