[project]
name = "cartorio-workers"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "arq>=0.26",
  "redis>=5.1",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "structlog>=24.4",
  "sentry-sdk>=2.17",
  "asyncpg>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "aiohttp>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "fakeredis>=2.26",
  "ruff>=0.6",
  "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
